@@ -22,7 +22,7 @@ kodkodi-1.5.7
 lipics-3.1.3
 llncs-2.23
 minisat-2.2.1-1
-mlton-20210117-1
+mlton-20210117-2
 nunchaku-0.5
 opam-2.0.7
 pdfjs-2.14.305
